Bug 61399 - [PATCH] sysdeps: Don't use LOG_PERROR if systemd is booted
Summary: [PATCH] sysdeps: Don't use LOG_PERROR if systemd is booted
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Havoc Pennington
QA Contact:
URL:
Whiteboard: r+
Keywords: patch
: 68553 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-24 14:33 UTC by Colin Walters
Modified: 2013-08-27 10:58 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
[PATCH] sysdeps: Don't use LOG_PERROR if systemd is booted (1.01 KB, patch)
2013-02-24 14:33 UTC, Colin Walters
Details | Splinter Review

Description Colin Walters 2013-02-24 14:33:34 UTC
Created attachment 75448 [details] [review]
[PATCH] sysdeps: Don't use LOG_PERROR if systemd is booted
Comment 1 Simon McVittie 2013-02-25 10:47:58 UTC
Comment on attachment 75448 [details] [review]
[PATCH] sysdeps: Don't use LOG_PERROR if systemd is booted

Review of attachment 75448 [details] [review]:
-----------------------------------------------------------------

Please tick the "is a patch" box when attaching patches, otherwise Splinter doesn't work.

Patch looks good.
Comment 2 Simon McVittie 2013-02-27 19:34:16 UTC
This was missing a #include "sd-daemon.h", which I've now fixed. Please do a build and "make check" with --enable-developer before merging patches.
Comment 3 Colin Walters 2013-02-28 13:43:44 UTC
(In reply to comment #2)
> This was missing a #include "sd-daemon.h", which I've now fixed. Please do a
> build and "make check" with --enable-developer before merging patches.

Odd...it worked locally, and gnome-ostree found the commit and built it about 10 minutes after I pushed.

Oh, it's a --enable-developer issue.  Yeah, sorry about that =/  Unfortunately my build system isn't yet highlighting compiler warnings for me, need to fix that...
Comment 4 Dagobert Michelsen 2013-04-03 11:01:32 UTC
The fix erranously reintroduced bug 39987.
Comment 5 Simon McVittie 2013-08-27 10:58:05 UTC
*** Bug 68553 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.