sysdeps: Don't use LOG_PERROR if systemd is booted

Otherwise we get duplicated log output, since stdout/stderr are
connected to the journal by default.

https://bugs.freedesktop.org/show_bug.cgi?id=61399